@@ -42,6 +42,7 @@
 * Airwallex: Update `referrer_data` field [drkjc] #4455
 * Simetrik: Update `order_id` and `description` to be top level fields [simetrik-frank] #4451
 * Plexo: Update `ip`, `description`, and `email` fields request format and scrub method to not filter cardholder name and reference id [ajawadmirza] #4457
+* Plexo: Update `verify` implementation and add `verify_amount` field [ajawadmirza] #4462
 
 == Version 1.126.0 (April 15th, 2022)
 * Moneris: Add 3DS MPI field support [esmitperez] #4373
